--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,5 +75,5 @@ dependencies {
     implementation 'io.reactivex.rxjava2:rxjava:2.1.10'
     implementation "com.squareup.retrofit2:adapter-rxjava2:2.4.0"
 
-
+    implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
 }
