--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,9 @@ buildscript {
         kotlin_version = '1.7.10'
         koin_version = '2.2.2'
         room_version = '2.4.3'
+        corotunes_version = "1.6.4"
+        ktorVersion = "1.6.8"
+        kotlinxSerializationVersion = "1.6.0"
     }
     repositories {
         google()
@@ -12,7 +15,7 @@ buildscript {
     dependencies {
         classpath "com.android.tools.build:gradle:7.2.2"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-
+        classpath "org.jetbrains.kotlin:kotlin-serialization:$kotlin_version"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
