--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,13 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     ext {
-        kotlin_version = '1.7.10'
+        kotlin_version = '1.7.0'
         koin_version = '2.2.2'
         room_version = '2.4.3'
         corotunes_version = "1.6.4"
         ktorVersion = "1.6.8"
         kotlinxSerializationVersion = "1.6.0"
+        compose_version = '1.2.0'
     }
     repositories {
         google()
