--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,7 +23,11 @@ android {
     }
 
     buildTypes {
+        debug {
+            buildConfigField "String", "API_KEY", apikeyProperties['API_KEY']
+        }
         release {
+            buildConfigField "String", "API_KEY", apikeyProperties['API_KEY']
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
@@ -40,13 +44,7 @@ android {
 
     kotlinOptions {
         jvmTarget = '1.8'
-//        useIR = true
     }
-
-//    kapt {
-//        generateStubs true
-//        correctErrorTypes true
-//    }
 
     composeOptions {
         kotlinCompilerExtensionVersion compose_version
