--- a/app/build.gradle
+++ b/app/build.gradle
@@ -99,6 +99,7 @@ dependencies {
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
     implementation "androidx.compose.ui:ui-tooling:$compose_version"
+    implementation "com.google.accompanist:accompanist-flowlayout:0.26.2-beta"
 
     implementation "io.coil-kt:coil-compose:2.2.0"
 
